--- a/Advanced Section/advanced_cbv/templates/index.html
+++ b/Advanced Section/advanced_cbv/templates/index.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 
 {% block body_block %}
-<h1>Testing Template Views!</h1>
-{% endblock %}  
+<h1>Welcome to the index page!</h1>
+<h2>Here is your injected content: {{ injectme }}</h2>
+{% endblock %}
