--- a/Advanced Section/advanced_cbv/templates/base.html
+++ b/Advanced Section/advanced_cbv/templates/base.html
@@ -1,25 +1,30 @@
 <!DOCTYPE html>
-{% load static %}
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>
-      CBVs
-      {% block title_block %}
-        Base
-      {% endblock %}
-    </title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+<head>
+  <meta charset="utf-8">
+  <title>Base</title>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+    integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
 </head>
-  <body>
 
-    <div class="container">
-      {% block body_block %}
+<body>
 
-      {% endblock %}
-    </div>
+  <nav class="navbar navbar-default navbar-static-top">
+    <ul class="nav navbar-nav">
+      <li><a class="navbar-brand" href="{% url 'basic_app:list' %}">Schools</a></li>
+      <li><a class="navbar-link" href="{% url 'admin:index' %}">Admin</a></li>
+      <li><a href="#"></a></li>
+    </ul>
+  </nav>
 
-  </body>
+  <div class="container">
+    {% block body_block %}
+
+    {% endblock %}
+  </div>
+
+</body>
 
 </html>
