--- a/Advanced Section/advanced_cbv/templates/index.html
+++ b/Advanced Section/advanced_cbv/templates/index.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 
 {% block body_block %}
-<h1>Welcome to the index page!</h1>
-<h2>Here is your injected content: {{ injectme }}</h2>
+<div class="jumbotron">
+    <h1>Home Page!</h1>
+</div>
 {% endblock %}
