--- a/Advanced Section/advanced_cbv/basic_app/templates/basic_app/school_detail.html
+++ b/Advanced Section/advanced_cbv/basic_app/templates/basic_app/school_detail.html
@@ -14,5 +14,8 @@
       {% endfor %}
 
   </div>
+  <div class="container">
+    <p><a class='btn btn-warning' href="{% url 'basic_app:update' pk=school_details.pk %}">Update</a></p>
 
+  </div>
 {% endblock %}
