--- a/Advanced Section/advanced_cbv/basic_app/templates/basic_app/school_list.html
+++ b/Advanced Section/advanced_cbv/basic_app/templates/basic_app/school_list.html
@@ -2,10 +2,10 @@
 {% block body_block %}
   <div class="jumbotron">
 
-    <h1>Welcome to the List of all Schools</h1>
+    <h1>Welcome to the List of Schools Page!</h1>
       <ol>
         {% for school in school_list %}
-          <h2><li>{{school.name}} </li></h2>
+          <h2><li><a href="{{school.id}}/">{{school.name}} </a></li></h2>
         {% endfor %}
       </ol>
 
