--- a/Advanced Section/advanced_cbv/basic_app/templates/basic_app/basic_app_base.html
+++ b/Advanced Section/advanced_cbv/basic_app/templates/basic_app/basic_app_base.html
@@ -12,7 +12,7 @@
         <ul class="nav navbar-nav">
           <li><a class="navbar-brand" href="{% url 'basic_app:list' %}">Schools</a></li>
           <li><a class="navbar-link" href="{% url 'admin:index' %}">Admin</a></li>
-          <li><a href="#"></a></li>
+          <li><a class="navbar-link" href="{% url 'basic_app:create' %}">Create School</a></li>
         </ul>
     </nav>
 
