--- a/blog_project/mysite/blog/templates/blog/base.html
+++ b/blog_project/mysite/blog/templates/blog/base.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-{% load staticfiles %}
+{% load static %}
 <html>
     <head>
         <title>Blog Project</title>
@@ -8,10 +8,14 @@
 
         <!-- Optional theme -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+<!--        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">-->
+<!--        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>-->
 
         {# MEDIUM STYLE EDITOR#}
-        <script src="//cdn.jsdelivr.net/medium-editor/latest/js/medium-editor.min.js"></script>
-        <link rel="stylesheet" href="//cdn.jsdelivr.net/medium-editor/latest/css/medium-editor.min.css" type="text/css" media="screen" charset="utf-8">
+<!--        <script src="//cdn.jsdelivr.net/medium-editor/latest/js/medium-editor.min.js"></script>-->
+<!--        <link rel="stylesheet" href="//cdn.jsdelivr.net/medium-editor/latest/css/medium-editor.min.css" type="text/css" media="screen" charset="utf-8">-->
+        <script src="//cdn.jsdelivr.net/npm/medium-editor@latest/dist/js/medium-editor.min.js"></script>
+        <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/medium-editor@latest/dist/css/medium-editor.min.css" type="text/css" media="screen" charset="utf-8">
 
 
         {# Custom CSS#}
@@ -34,8 +38,8 @@
       <ul class="nav navbar-nav">
         <li><a class='navbar-brand bigbrand' href="{% url 'post_list' %}">My Tech blog</a></li>
         <li><a href="{% url 'about'%}">About</a></li>
-        <li><a href="https://www.github.com">Github</a></li>
-        <li><a href="https://www.linkedin.com">LinkedIn</a></li>
+        <li><a href="https://github.com/mourice-oduor">Github</a></li>
+        <li><a href="https://www.linkedin.com/in/mourice-otieno-oduor-58188b166/">LinkedIn</a></li>
 
       </ul>
 
@@ -77,9 +81,6 @@
             </div>
         </div>
 
-{# SCRIPTS#}
-
-<script type="text/javascript" src="{% static 'js/blog.js' %}"></script>
-
 </body>
 </html>
+
