Update template file

--- a/blog_project/mysite/blog/templates/blog/about.html
+++ b/blog_project/mysite/blog/templates/blog/about.html
@@ -1,6 +1,14 @@
 {% extends "blog/base.html" %}
 {% block content %}
 <h1>About me</h1>
-<p>Thanks for visiting my blog! Check all this cool stuff about me!</p>
 
+<p> I am a software engineer with a degree in BSc Mathematics and Computer Science. I have
+    Specified in Applied Mathematics option, and a final year student at Taita Taveta University.
+    <p> I am a full stack software developer with skills in;</p>
+    <strong> Python- with Django in web development</strong><br>
+    <strong> JavaScript- with Nodejs(mongodb)</strong>
+</p>
+
+
+<p>Thanks for visiting my blog! Check all this cool stuff about me!</p>
 {% endblock %}
