--- a/blog_project/mysite/blog/templates/blog/base.html
+++ b/blog_project/mysite/blog/templates/blog/base.html
@@ -1,28 +1,32 @@
 <!DOCTYPE html>
 {% load static %}
 <html>
-    <head>
-        <title>Blog Project</title>
-        <!-- Latest compiled and minified CSS -->
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
-        <!-- Optional theme -->
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-<!--        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">-->
-<!--        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>-->
+<head>
+  <title>Blog Project</title>
+  <!-- Latest compiled and minified CSS -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+    integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
-        {# MEDIUM STYLE EDITOR#}
-<!--        <script src="//cdn.jsdelivr.net/medium-editor/latest/js/medium-editor.min.js"></script>-->
-<!--        <link rel="stylesheet" href="//cdn.jsdelivr.net/medium-editor/latest/css/medium-editor.min.css" type="text/css" media="screen" charset="utf-8">-->
-        <script src="//cdn.jsdelivr.net/npm/medium-editor@latest/dist/js/medium-editor.min.js"></script>
-        <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/medium-editor@latest/dist/css/medium-editor.min.css" type="text/css" media="screen" charset="utf-8">
+  <!-- Optional theme -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css"
+    integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+  <!--        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">-->
+  <!--        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>-->
+
+  {# MEDIUM STYLE EDITOR#}
+  <!--        <script src="//cdn.jsdelivr.net/medium-editor/latest/js/medium-editor.min.js"></script>-->
+  <!--        <link rel="stylesheet" href="//cdn.jsdelivr.net/medium-editor/latest/css/medium-editor.min.css" type="text/css" media="screen" charset="utf-8">-->
+  <script src="//cdn.jsdelivr.net/npm/medium-editor@latest/dist/js/medium-editor.min.js"></script>
+  <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/medium-editor@latest/dist/css/medium-editor.min.css"
+    type="text/css" media="screen" charset="utf-8">
 
 
-        {# Custom CSS#}
-        <link rel="stylesheet" href="{% static 'css/blog.css' %}">
+  {# Custom CSS#}
+  <link rel="stylesheet" href="{% static 'css/blog.css' %}">
 
-        {# Fonts#}
-        <link href="https://fonts.googleapis.com/css?family=Montserrat|Russo+One" rel="stylesheet">
+  {# Fonts#}
+  <link href="https://fonts.googleapis.com/css?family=Montserrat|Russo+One" rel="stylesheet">
 
 
 
@@ -40,47 +44,54 @@
         <li><a href="{% url 'about'%}">About</a></li>
         <li><a href="https://github.com/mourice-oduor">Github</a></li>
         <li><a href="https://www.linkedin.com/in/mourice-otieno-oduor-58188b166/">LinkedIn</a></li>
+        <li><a href="https://twitter.com/Morys0">Twitter</a></li>
+        <li><a href="https://www.instagram.com/mourice_otieno_moryso/">Instagram</a></li>
+
 
       </ul>
 
       <ul class="nav navbar-nav navbar-right">
         {% if user.is_authenticated %}
         <li>
-          <a href="{% url 'post_new' %}" >New Post</a>
+          <a href="{% url 'post_new' %}">New Post</a>
         </li>
 
         <li>
           <a href="{% url 'post_draft_list' %}">Drafts</a>
         </li>
         <li>
-          <a href="{% url 'logout' %}" >Log out</a>
+          <a href="{% url 'logout' %}">Log out</a>
         </li>
 
         <li>
-          <a >Welcome: {{ user.username }}</a>
+          <a>Welcome: {{ user.username }}</a>
         </li>
-          {% else %}
-          <li><a class='nav navbar-right' href="{% url 'login' %}" ><span class="glyphicon glyphicon-user"></span></a></li>
+        {% else %}
+        <li><a class='nav navbar-right' href="{% url 'login' %}"><span class="glyphicon glyphicon-user"></span></a></li>
         {% endif %}
 
       </ul>
-  </div>
-</nav>
+    </div>
+  </nav>
 
   {# The actual blog posts#}
-        <div class="content container">
-            <div class="row">
-                <div class="col-md-8">
-                  <div class="blog_posts">
-                    {% block content %}
-                    {% endblock %}
+  <div class="content container">
+    <div class="row">
+      <div class="col-md-8">
+        <div class="blog_posts">
+          {% block content %}
+          {% endblock %}
 
-                  </div>
-
-                </div>
-            </div>
         </div>
 
-</body>
-</html>
+      </div>
+    </div>
+  </div>
 
+  {# SCRIPTS#}
+
+  <script type="text/javascript" src="{% static 'js/blog.js' %}"></script>
+
+</body>
+
+</html>
