--- a/blog_project/mysite/blog/templates/blog/about.html
+++ b/blog_project/mysite/blog/templates/blog/about.html
@@ -2,6 +2,11 @@
 {% block content %}
 <h1>About me</h1>
 
+<div class="col-md-4">
+    <img src="/media/images/moryso.jpg" class="img-responsive" style="width: 100%; float: left; margin-right: 10px;" />
+</div>
+
+
 <p> I am a software engineer with a degree in BSc Mathematics and Computer Science. I have
     Specified in Applied Mathematics option, and a final year student at Taita Taveta University.
     <p> I am a full stack software developer with skills in;</p>
@@ -10,5 +15,6 @@
 </p>
 
 
-<p>Thanks for visiting my blog! Check all this cool stuff about me!</p>
+
+<p>Thanks for visiting my blog! Check all my projects on the github link above!</p>
 {% endblock %}
