Update template file

--- a/blog_project/mysite/blog/templates/blog/about.html
+++ b/blog_project/mysite/blog/templates/blog/about.html
@@ -10,8 +10,11 @@
 <p> I am a software engineer with a degree in BSc Mathematics and Computer Science. I have
     Specified in Applied Mathematics option, and a final year student at Taita Taveta University.
     <p> I am a full stack software developer with skills in;</p>
-    <strong> Python- with Django in web development</strong><br>
-    <strong> JavaScript- with Nodejs(mongodb)</strong>
+    <li><a href="https://developer.mozilla.org/en-US/docs/Learn/Server-side/Django">Python- with Django in web
+            development</a></li>
+    <li><a href="https://developer.mozilla.org/en-US/docs/Learn/Server-side/Express_Nodejs/Introduction">JavaScript-
+            with Nodejs(mongodb)</a></li>
+
 </p>
 
 
