--- a/blog_project/mysite/blog/templates/blog/about.html
+++ b/blog_project/mysite/blog/templates/blog/about.html
@@ -8,7 +8,7 @@
 
 
 <p> I am a software engineer with a degree in BSc Mathematics and Computer Science. I have
-    Specified in Applied Mathematics option, and a final year student at Taita Taveta University.
+    Specialized in Applied Mathematics option, and a final year student at Taita Taveta University.
     <p> I am a full stack software developer with skills in;</p>
     <li><a href="https://developer.mozilla.org/en-US/docs/Learn/Server-side/Django">Python- with Django in web
             development</a></li>
