--- a/blog_project/mysite/blog/templates/blog/base.html
+++ b/blog_project/mysite/blog/templates/blog/base.html
@@ -1,97 +1,84 @@
 <!DOCTYPE html>
 {% load static %}
 <html>
+    <head>
+        <meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta http-equiv="X-UA-Compatible" content="ie=edge">
+		<title>Dev-Mourice Blog</title>
+        <link rel="icon" href="media/images/ic1" type="image/png">
+        <!-- Latest compiled and minified CSS -->
+        <!--        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">-->
+         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+        <!-- Optional theme -->
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+        {# MEDIUM STYLE EDITOR#}
+        <!--        <script src="//cdn.jsdelivr.net/medium-editor/latest/js/medium-editor.min.js"></script>-->
+        <!--        <link rel="stylesheet" href="//cdn.jsdelivr.net/medium-editor/latest/css/medium-editor.min.css" type="text/css" media="screen" charset="utf-8">-->
+        <script src="//cdn.jsdelivr.net/npm/medium-editor@latest/dist/js/medium-editor.min.js"></script>
+        <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/medium-editor@latest/dist/css/medium-editor.min.css" type="text/css" media="screen" charset="utf-8">
+        <link rel="stylesheet" href="{% static 'css/blog.css' %}">
+        <link href="https://fonts.googleapis.com/css?family=Montserrat|Russo+One" rel="stylesheet">
+    </head>
 
-<head>
-  <title>Blog Project</title>
-  <!-- Latest compiled and minified CSS -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
-    integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <body class='loader'>
+      <nav class="navbar navbar-default techfont custom-navbar">
+        <div class="container">
+          <ul class="nav navbar-nav">
+            <li>
+                <a class='navbar-brand bigbrand' href="{% url 'post_list' %}">My Tech blog</a>
+            </li>
+            <li>
+                <a href="{% url 'about'%}">About</a>
+            </li>
+            <li>
+                <a href="https://github.com/mourice-oduor" target="_blank" rel="noopener noreferrer">Github</a>
+            </li>
+            <li>
+                <a href="https://mourice-oduor.github.io/portfolio-site/" target="_blank" rel="noopener noreferrer">Portfolio</a>
+            </li>
+            <li>
+                <a href="https://dev-mourice.herokuapp.com/" target="_blank" rel="noopener noreferrer">Website</a>
+            </li>
+          </ul>
 
-  <!-- Optional theme -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css"
-    integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-  <!--        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">-->
-  <!--        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>-->
-
-  {# MEDIUM STYLE EDITOR#}
-  <!--        <script src="//cdn.jsdelivr.net/medium-editor/latest/js/medium-editor.min.js"></script>-->
-  <!--        <link rel="stylesheet" href="//cdn.jsdelivr.net/medium-editor/latest/css/medium-editor.min.css" type="text/css" media="screen" charset="utf-8">-->
-  <script src="//cdn.jsdelivr.net/npm/medium-editor@latest/dist/js/medium-editor.min.js"></script>
-  <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/medium-editor@latest/dist/css/medium-editor.min.css"
-    type="text/css" media="screen" charset="utf-8">
-
-
-  {# Custom CSS#}
-  <link rel="stylesheet" href="{% static 'css/blog.css' %}">
-
-  {# Fonts#}
-  <link href="https://fonts.googleapis.com/css?family=Montserrat|Russo+One" rel="stylesheet">
-
-
-
-
-
-<body class='loader'>
-
-
-  <nav class="navbar navbar-default techfont custom-navbar">
-    <div class="container">
-
-
-      <ul class="nav navbar-nav">
-        <li><a class='navbar-brand bigbrand' href="{% url 'post_list' %}">My Tech blog</a></li>
-        <li><a href="{% url 'about'%}">About</a></li>
-        <li><a href="https://github.com/mourice-oduor">Github</a></li>
-        <li><a href="https://www.linkedin.com/in/mourice-otieno-oduor-58188b166/">LinkedIn</a></li>
-        <li><a href="https://twitter.com/Morys0">Twitter</a></li>
-        <li><a href="https://www.instagram.com/mourice_otieno_moryso/">Instagram</a></li>
-
-
-      </ul>
-
-      <ul class="nav navbar-nav navbar-right">
-        {% if user.is_authenticated %}
-        <li>
-          <a href="{% url 'post_new' %}">New Post</a>
-        </li>
-
-        <li>
-          <a href="{% url 'post_draft_list' %}">Drafts</a>
-        </li>
-        <li>
-          <a href="{% url 'logout' %}">Log out</a>
-        </li>
-
-        <li>
-          <a>Welcome: {{ user.username }}</a>
-        </li>
-        {% else %}
-        <li><a class='nav navbar-right' href="{% url 'login' %}"><span class="glyphicon glyphicon-user"></span></a></li>
-        {% endif %}
-
-      </ul>
-    </div>
-  </nav>
-
-  {# The actual blog posts#}
-  <div class="content container">
-    <div class="row">
-      <div class="col-md-8">
-        <div class="blog_posts">
-          {% block content %}
-          {% endblock %}
-
+          <ul class="nav navbar-nav navbar-right">
+            {% if user.is_authenticated %}
+            <li>
+              <a href="{% url 'post_new' %}" >New Post</a>
+            </li>
+            <li>
+              <a href="{% url 'post_draft_list' %}">Drafts</a>
+            </li>
+            <li>
+              <a href="{% url 'logout' %}" >Log out</a>
+            </li>
+            <li>
+              <a >Welcome: {{ user.username }}</a>
+            </li>
+              {% else %}
+              <li><a class='nav navbar-right' href="{% url 'login' %}" ><span class="glyphicon glyphicon-user"></span></a></li>
+            {% endif %}
+          </ul>
         </div>
+      </nav>
 
-      </div>
-    </div>
-  </div>
-
-  {# SCRIPTS#}
-
-  <script type="text/javascript" src="{% static 'js/blog.js' %}"></script>
-
-</body>
+      {# The actual blog posts#}
+            <div class="content container">
+                <div class="row">
+                    <div class="col-md-8">
+                      <div class="blog_posts">
+                        {% block content %}
+                        {% endblock %}
+                      </div>
+                    </div>
+                </div>
+            </div>
+        <script type="text/javascript" src="{% static 'js/blog.js' %}"></script>
+    </body>
 
 </html>
